fixed the alignment in the code

--- a/recipes/recipes.css
+++ b/recipes/recipes.css
@@ -129,12 +129,13 @@ label {
     border-radius: 4px;
   }
   button {
-    background-color: #4caf50;
+    background-color: #ffffff;
     color: white;
     padding: 10px 15px;
     border: none;
     border-radius: 4px;
     cursor: pointer;
+
   }
   .errors {
     white-space: pre-line; /*needed for 2 errors to be on separate lines*/
